# albero

./: .directory  .gitignore  README.md
docs/images/: .directory
frontend/: albero.css  albero.php  alberoAnalogViewer.css  alberoAnalogViewer.js  alberoAnalogViewer.php  alberoAnalogViewer2.php  alberoConfigurationBox.css  alberoConfigurationBox.js  alberoConfigurationBox.php  alberoFloatingScale.php  alberoToolbox.css  alberoToolbox.js  alberoToolbox.php  albero_map.php  albero_ubermap.css  mipmaps.js  mipmaps.php  resources.php
frontend/albero_resources/: escalas.rar
server/: .gitignore  Albero2.cpp  Albero2.h  CMakeLists.txt  Color.cpp  ColorSchema.cpp  ColorSchema.h  ForecastReader.cpp  ForecastReader.h  HCL.cpp  HCL.h  ObservationReader.cpp  PCT.cpp  PCT.h  Palette.cpp  Palette.h  albero.kdev4  albero2.cpp  albero2.h  color.cpp  color.h  color_schema.cpp  color_schema.h  forecast_importer.cpp  forecast_importer.h  forecast_reader.cpp  forecast_reader.h  hcl.cpp  hcl.h  helper.cpp  helper.h  main.cpp  observation_reader.cpp  observation_reader.h  palette.cpp  palette.h  pct.cpp  pct.h
server/.kdev4/: albero.kdev4
server/commands/: base.cpp  command.h  get_analog_viewer.cpp  get_available_days.cpp  get_mse.cpp  get_numerical_forecast.cpp  get_observation.cpp  get_probabilistic_forecast.cpp  initialize.cpp  ping.cpp
